Add meta tag Open Graph

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="icon" href="assets/img/spacex.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <meta property="og:title" content="Il titolo del tuo sito" />
-    <meta property="og:url" content="https://www.tuosito.com" />
-    <meta property="og:description" content="Questa è una descrizione breve e accattivante del tuo sito." />
-    <meta property="og:image" content="https://www.tuosito.com/path-to-image.jpg" />  
+    <head>
+        <meta property="og:title" content="Jacopo Carrozzo | Personal Website"/>
+        <meta property="og:url" content="https://jacopoloco.github.io"/>
+        <meta property="og:description" content="Sviluppatore web e blockchain. Segui il mio viaggio nel mondo tech." />
+        <meta property="og:image" content="https://jacopoloco.github.io/assets/img/Foto-1.jpg"/>
+        <meta property="og:type" content="website" />
+      </head>
+      
   </head>
 
   <body>
