--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <title>Jacopo Carrozzo</title>
     <link rel="icon" href="assets/img/spacex.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-    <head>
-        <meta property="og:title" content="Jacopo Carrozzo | Personal Website"/>
-        <meta property="og:url" content="https://jacopoloco.github.io"/>
-        <meta property="og:description" content="Sviluppatore web e blockchain. Segui il mio viaggio nel mondo tech." />
-        <meta property="og:image" content="https://jacopoloco.github.io/assets/img/Foto-1.jpg"/>
-        <meta property="og:type" content="website" />
-      </head>
+    <meta property="og:title" content="Jacopo Carrozzo | Personal Website"/>
+    <meta property="og:url" content="https://jacopoloco.github.io"/>
+    <meta property="og:description" content="Sviluppatore web e blockchain. Segui il mio viaggio nel mondo tech." />
+    <meta property="og:image" content="https://jacopoloco.github.io/assets/img/Foto-1.jpg"/>
+    <meta property="og:type" content="Website"/>
       
   </head>
 
