--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,11 @@
     <title>Jacopo Carrozzo</title>
     <link rel="icon" href="../assets/img/spacex.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-
+    <meta property="og:url" content="https://jacopoloco.github.io"/>
+    <meta property="og:type" content="Website"/>
+    <meta property="og:title" content="Jacopo Carrozzo | Personal Website"/>
+    <meta property="og:description" content="Sviluppatore web e blockchain. Segui il mio viaggio nel mondo tech." />
+    <meta property="og:image" content="https://jacopoloco.github.io/assets/img/Andromeda.jpg"/>
   </head>
 
   <body class="projects-page">
