--- a/pages/social.html
+++ b/pages/social.html
@@ -7,9 +7,11 @@
     <link rel="icon" href="../assets/img/spacex.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    
-
+    <meta property="og:url" content="https://jacopoloco.github.io"/>
+    <meta property="og:type" content="Website"/>
+    <meta property="og:title" content="Jacopo Carrozzo | Personal Website"/>
+    <meta property="og:description" content="Sviluppatore web e blockchain. Segui il mio viaggio nel mondo tech." />
+    <meta property="og:image" content="https://jacopoloco.github.io/assets/img/Andromeda.jpg"/>
   </head>
 
   <body>
