Add Less file and edit css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacopo Carrozzo</title>
     <link rel="icon" href="assets/img/spacex.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/stile.css">
     <meta property="og:url" content="https://jacopoloco.github.io"/>
     <meta property="og:type" content="Website"/>
     <meta property="og:title" content="Jacopo Carrozzo | Personal Website"/>
