Update css and less

--- a/pages/curriculum.html
+++ b/pages/curriculum.html
@@ -76,7 +76,7 @@
 
 
                         <div class="image-container">
-                            <img src="../assets/img/DecathlonExotec.jpg" class="responsive-image main-image6" alt="Immagine">
+                            <img src="../assets/img/DecathlonExotec.jpg" class="responsive-image main-image6 opacity" alt="Immagine">
                             
                             <div class="inner-right3"><b>
                                 <h3>Decathlon Logistics (Schwetzingen,Germany)</h3>
@@ -100,7 +100,7 @@
                                 azienda di sviluppo software.
                                 <br>Adesso con Start2impact sto svolgendo un master per diventare blockchain developer.
                                 </p>
-                                <h1>Language Skills</h1>
+                                <h2>Language Skills</h2>
                                 <p>Italiano: Madrelingua</p>
                                 <p>Inglese: B1</p>
                                 <p>Spaganolo: A1</p>
