--- a/pages/social.html
+++ b/pages/social.html
@@ -30,12 +30,13 @@
                 </div>
 
 
+
                     <div>
 
                         <div class="image-container" >
                             <img src="../assets/img/net.jpg" class="responsive-image main-image8">
                             
-                            <div class="inner-centerCV">
+                            <div class="inner-social">
                                 <h1>Social</h1>
                             </div>
                                
