--- a/pages/social.html
+++ b/pages/social.html
@@ -37,7 +37,7 @@
                             <img src="../assets/img/net.jpg" class="responsive-image main-image8">
                             
                             <div class="inner-social">
-                                <h1>Social</h1>
+                                <b><h1>Social</h1></b>
                             </div>
                                
                             <div class="social">
